--- a/style.css
+++ b/style.css
@@ -62,10 +62,7 @@ button
 {
  margin: 3vh;
 }
-#lightblueBox img
-{
-  width: 80vw;
-}
+
 .darkblueBox
 {
     background-color: #05263a;
@@ -77,7 +74,10 @@ button
 {
     padding: 1vh;
 }
-
+.authorCard img
+    {
+        width: 80vw;
+    }
 #checkBoxes 
 {
     padding: 4vmax;
